<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/name_edit_text"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_80"
        android:layout_marginTop="@dimen/dp_80"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginEnd="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_20"
        android:maxLines="1"
        android:inputType="text"
        android:hint="@string/edit_text_hint"
        android:maxLength="15"
        android:textColorHint="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/level_text"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp_50"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginLeft="@dimen/dp_20"
        android:gravity="center"
        android:text="@string/level"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/sp_20"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name_edit_text" />

    <Spinner
        android:id="@+id/level_spinner"
        android:layout_width="@dimen/dp_80"
        android:layout_height="@dimen/dp_50"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginEnd="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_20"
        android:entries="@array/level"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/level_text"
        app:layout_constraintTop_toBottomOf="@id/name_edit_text" />

    <Button
        android:id="@+id/cancel_btn"
        android:layout_width="@dimen/dp_80"
        android:layout_height="@dimen/dp_80"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginLeft="@dimen/dp_20"
        android:background="@drawable/button_round_shape"
        android:text="@string/action_cancel"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/level_spinner"
        app:layout_constraintBottom_toBottomOf="parent" />

    <Button
        android:id="@+id/clear_btn"
        android:layout_width="@dimen/dp_80"
        android:layout_height="@dimen/dp_80"
        android:background="@drawable/button_round_shape"
        android:text="@string/action_clear"
        app:layout_constraintLeft_toRightOf="@id/cancel_btn"
        app:layout_constraintRight_toLeftOf="@id/add_btn"
        app:layout_constraintTop_toBottomOf="@id/level_spinner"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
        android:id="@+id/add_btn"
        android:layout_width="@dimen/dp_80"
        android:layout_height="@dimen/dp_80"
        android:layout_marginEnd="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_20"
        android:background="@drawable/button_round_shape"
        android:text="@string/action_add"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/level_spinner"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
